--- a/course.html
+++ b/course.html
@@ -317,7 +317,7 @@
                     <img src="/images/c1.webp" class="card-img-top" alt="Course 1 Image">
                     <div class="card-body">
                         <h5 class="card-title">GATE MATHEMATICS</h5>
-                        <p class="card-text">Brief description of Course 1. This course covers the basics and advanced topics.</p>
+                        <p class="card-text">Gate mathematics explores advanced problem-solving techniques in algebra, calculus, probability, and linear systems for engineering.</p>
                         <a href="https://www.youtube.com/live/b-UZJVdLbXc?si=Y9gueBsLfhH3vcev" class="btn btn-primary">Enroll Now</a>
                     </div>
                 </div>
@@ -326,11 +326,11 @@
             <!-- Course Card 2 -->
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card">
-                    <img src="/images/course2.webp" class="card-img-top" alt="Course 2 Image">
+                    <img src="/images/c2.webp" class="card-img-top" alt="Course 2 Image">
                     <div class="card-body">
-                        <h5 class="card-title">Course Title 2</h5>
-                        <p class="card-text">Brief description of Course 2. This course focuses on practical applications and case studies.</p>
-                        <a href="#" class="btn btn-primary">Enroll Now</a>
+                        <h5 class="card-title">MTECH PHYSICS</h5>
+                        <p class="card-text">Physics studies matter, energy, forces, and motion, explaining natural phenomena through fundamental laws and principles.</p>
+                        <a href="https://www.youtube.com/live/VGpq3AjyJeA?si=rHU6EQkhjYDAL1HM" class="btn btn-primary">Enroll Now</a>
                     </div>
                 </div>
             </div>
@@ -338,11 +338,11 @@
             <!-- Course Card 3 -->
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card">
-                    <img src="/images/course3.webp" class="card-img-top" alt="Course 3 Image">
+                    <img src="/images/c3.webp" class="card-img-top" alt="Course 3 Image">
                     <div class="card-body">
-                        <h5 class="card-title">Course Title 3</h5>
-                        <p class="card-text">Brief description of Course 3. Learn from industry experts and gain hands-on experience.</p>
-                        <a href="#" class="btn btn-primary">Enroll Now</a>
+                        <h5 class="card-title">GATE CHEMISTRY</h5>
+                        <p class="card-text">Chemistry explores matter's composition, properties, and interactions, revealing atomic structures, reactions, and molecular transformations.</p>
+                        <a href="https://www.youtube.com/live/YwBpoujRIC0?si=GW1w8-yM6wLuPGFg" class="btn btn-primary">Enroll Now</a>
                     </div>
                 </div>
             </div>
@@ -350,39 +350,16 @@
             <!-- Course Card 4 -->
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card">
-                    <img src="/images/course4.webp" class="card-img-top" alt="Course 4 Image">
+                    <img src="/images/c4.webp" class="card-img-top" alt="Course 4 Image">
                     <div class="card-body">
-                        <h5 class="card-title">Course Title 4</h5>
-                        <p class="card-text">Brief description of Course 4. This course is designed for beginners and advanced learners alike.</p>
-                        <a href="#" class="btn btn-primary">Enroll Now</a>
+                        <h5 class="card-title">DIGITAL LOGIC</h5>
+                        <p class="card-text">Digital logic focuses on binary systems, logic gates, and circuits, forming the foundation of modern computing.</p>
+                        <a href="https://youtu.be/O0gtKDu_cJc?si=fSnfaU6xHfK3ZEzP" class="btn btn-primary">Enroll Now</a>
                     </div>
                 </div>
             </div>
 
-            <!-- Course Card 5 -->
-            <div class="col-lg-4 col-md-6 mb-4">
-                <div class="card">
-                    <img src="/images/course5.webp" class="card-img-top" alt="Course 5 Image">
-                    <div class="card-body">
-                        <h5 class="card-title">Course Title 5</h5>
-                        <p class="card-text">Brief description of Course 5. Enhance your skills with this comprehensive course.</p>
-                        <a href="#" class="btn btn-primary">Enroll Now</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Course Card 6 -->
-            <div class="col-lg-4 col-md-6 mb-4">
-                <div class="card">
-                    <img src="/images/course6.webp" class="card-img-top" alt="Course 6 Image">
-                    <div class="card-body">
-                        <h5 class="card-title">Course Title 6</h5>
-                        <p class="card-text">Brief description of Course 6. Join us to explore advanced techniques and strategies.</p>
-                        <a href="#" class="btn btn-primary">Enroll Now</a>
-                    </div>
-                </div>
-            </div>
-   
+           
     
   <section id="footer">
     <div class="container-fluid padding-side padding-small pt-0" data-aos="fade-up">
