--- a/leaderboard.html
+++ b/leaderboard.html
@@ -366,6 +366,132 @@
       </div>
     </div>
   </div>
+  <section id="footer">
+    <div class="container-fluid padding-side padding-small pt-0" data-aos="fade-up">
+      <footer class="row">
+        <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
+          <h4><b>Edu<i>X</i></b></h4>
+          <p class="mt-3">Join EduX: Unlock Your Potential, Achieve Your Dreams, and Excel Together!
+          </p>
+          <ul class="social-links d-flex flex-wrap list-unstyled mt-4 mb-0">
+            <li>
+              <a href="#">
+                <svg class="social me-4" width="20" height="20">
+                  <use xlink:href="#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <svg class="social me-4" width="20" height="20">
+                  <use xlink:href="#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <svg class="social me-4" width="20" height="20">
+                  <use xlink:href="#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <svg class="social me-4" width="20" height="20">
+                  <use xlink:href="#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <svg class="social me-4" width="20" height="20">
+                  <use xlink:href="#youtube"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-6 col-lg-3 offset-lg-1 mb-4 mb-lg-0">
+          <h4 class="display-6 fw-normal">Join Our Newsletter</h4>
+          <p>Sign up to our newsletter to receive latest news.</p>
+          <form class=" position-relative">
+            <input type="text" class="form-control px-4 py-3 bg-transparent mb-3" placeholder="Your Name">
+            <input type="email" class="form-control px-4 py-3 bg-transparent" placeholder="Your email">
+            <div class="d-grid">
+              <button href="#" class="btn btn-arrow btn-primary mt-3">
+                <span>Subscribe Now<svg width="18" height="18">
+                    <use xlink:href="#arrow-right"></use>
+                  </svg></span>
+              </button>
+            </div>
+          </form>
+        </div>
+        <div class="col-md-6 col-lg-3 offset-lg-1 mb-4 mb-lg-0">
+          <h4 class="display-6 fw-normal">Our Info</h4>
+          <ul class="nav flex-column">
+            <li class="location text-capitalize d-flex align-items-center">
+              <svg class="color me-1" width="20" height="20">
+                <use xlink:href="#location"></use>
+              </svg>New Delhi
+            </li>
+            <li class="text-capitalize ms-4">
+
+            </li>
+            <li class="text-capitalize ms-4">
+
+            </li>
+            <li class="text-capitalize ms-4">
+
+            </li>
+            <li class="phone text-capitalize d-flex align-items-center mt-2">
+              <svg class="color me-1" width="20" height="20">
+                <use xlink:href="#phone"></use>
+              </svg>+666 333 9999, +444 777 666
+            </li>
+            <li class="email text-capitalize d-flex align-items-center mt-2">
+              <svg class="color me-1" width="20" height="20">
+                <use xlink:href="#email"></use>
+              </svg>yourdomain@email.com
+            </li>
+          </ul>
+        </div>
+      </footer>
+    </div>
+    <hr class="text-black">
+    <div class="container-fluid padding-side padding-small" data-aos="fade-up">
+      <footer class="row">
+        <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
+          <h4 class="display-6 fw-normal">Quick links</h4>
+          <ul class="nav flex-column">
+            <li class="nav-item"><a href="#" class="p-0 "> Home </a></li>
+            <li class="nav-item"><a href="#" class="p-0 "> About us </a></li>
+            <li class="nav-item"><a href="#" class="p-0 "> Our Services </a></li>
+            <li class="nav-item"><a href="#" class="p-0 "> Privacy Policy</a></li>
+            <li class="nav-item"><a href="#" class="p-0 "> Contact us </a></li>
+            <li class="nav-item"><a href="#" class="p-0 "> Support </a></li>
+          </ul>
+        </div>
+
+        <div class="col-md-6 col-lg-3 offset-lg-1 mb-4 mb-lg-0">
+          <p class="m-0">© Copyright 2024</p>
+          <p>Free Website Template:<a href="https://templatesjungle.com/" class="text-decoration-underline"
+              target="_blank">TemplatesJungle</a><br> Distributed By: <a href="https://themewagon.com"
+              class="text-decoration-underline" target="blank">ThemeWagon</a></p>
+        </div>
+      </footer>
+    </div>
+  </section>
+
+  <script src="js/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
+  <script type="text/javascript" src="js/plugins.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script type="text/javascript" src="js/script.js"></script>
+  <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+</body>
+
+</html>
   <!-- partial -->
   <script src="leaderboard.js"></script>
   <script src="js/jquery-1.11.0.min.js"></script>
