--- a/course.html
+++ b/course.html
@@ -278,7 +278,7 @@
                   <a class="nav-link p-0" href="indexlib.html">Library</a>
                 </li>
                 <li class="nav-item px-3">
-                  <a class="nav-link p-0" href="index.html">Quiz</a>
+                  <a class="nav-link p-0" href="leaderboard.html">Quiz</a>
                 </li>
                 <li class="nav-item px-3">
                   <a class="nav-link p-0" href="index.html">Community</a>
