--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                 <input name="quantity" class="form-control text-black-50 ps-3">
               </div>
               <div class="d-grid">
-                <button href="#" class="btn btn-arrow btn-primary mt-3">
+                <button href="community.html" class="btn btn-arrow btn-primary mt-3">
                   <span>Join Now<svg width="18" height="18">
                       <use xlink:href="#arrow-right"></use>
                     </svg></span>
