--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
               <img src="images/pattern2.png" alt="img"
                 class="position-absolute top-100 start-50 translate-middle z-n1 pe-5">
             </div>
-            <h4 class="display-6 fw-normal my-3">community</h4>
+            <h4 class="display-6 fw-normal my-3">Community</h4>
             <p>EduX Community: Connect, collaborate, share resources, and support each other to excel in academics and
               exams.
 
@@ -654,7 +654,7 @@
               <img src="images/pattern2.png" alt="img"
                 class="position-absolute top-100 start-50 translate-middle z-n1 pe-5">
             </div>
-            <h4 class="display-6 fw-normal my-3">Community</h4>
+            <h4 class="display-6 fw-normal my-3">Library</h4>
             <p>Expert-led video lectures that simplify complex topics, making learning engaging and easy to understand.
             </p>
             <a href="index.html" class="btn btn-arrow">
