--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
               <img src="images/pattern2.png" alt="img"
                 class="position-absolute top-100 start-50 translate-middle z-n1 pe-5">
             </div>
-            <h4 class="display-6 fw-normal my-3">Community</h4>
+            <h4 class="display-6 fw-normal my-3">community</h4>
             <p>EduX Community: Connect, collaborate, share resources, and support each other to excel in academics and
               exams.
 
@@ -654,11 +654,7 @@
               <img src="images/pattern2.png" alt="img"
                 class="position-absolute top-100 start-50 translate-middle z-n1 pe-5">
             </div>
-<<<<<<< HEAD
             <h4 class="display-6 fw-normal my-3">Library</h4>
-=======
-            <h4 class="display-6 fw-normal my-3">Video Lectures</h4>
->>>>>>> 3e94cf29d78be698d56c307a67e6c7eebbf8955e
             <p>Expert-led video lectures that simplify complex topics, making learning engaging and easy to understand.
             </p>
             <a href="index.html" class="btn btn-arrow">
@@ -677,7 +673,7 @@
               <img src="images/pattern2.png" alt="img"
                 class="position-absolute top-100 start-50 translate-middle z-n1 pe-5">
             </div>
-            <h4 class="display-6 fw-normal my-3">AI Teacher</h4>
+            <h4 class="display-6 fw-normal my-3">Doubt Solving</h4>
             <p>An AI-powered teacher offering personalized guidance, instant doubt resolution, and tailored learning for
               better results.</p>
             <a href="index.html" class="btn btn-arrow">
@@ -715,7 +711,7 @@
               <img src="images/pattern2.png" alt="img"
                 class="position-absolute top-100 start-50 translate-middle z-n1 pe-5">
             </div>
-            <h4 class="display-6 fw-normal my-3">Mock Tests</h4>
+            <h4 class="display-6 fw-normal my-3">Quizs</h4>
             <p>Simulated exams that mimic real test conditions, helping improve time management and exam performance.
             </p>
             <a href="index.html" class="btn btn-arrow">
