--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                   <a class="nav-link p-0" href="leaderboard.html">Quiz</a>
                 </li>
                 <li class="nav-item px-3">
-                  <a class="nav-link p-0" href="community.js">Community</a>
+                  <a class="nav-link p-0" href="community.html">Community</a>
                 </li>
                 <li class="nav-item px-3">
                   <a class="nav-link p-0" href="index.html">Contact</a>
@@ -937,7 +937,7 @@
           </ul>
         </div>
 
-        
+
       </footer>
     </div>
   </section>
