--- a/community.html
+++ b/community.html
@@ -172,7 +172,7 @@
                     <i data-lucide="users" class="mr-2 text-blue-500"></i>
                     <span>5 Members</span>
                     <button class="ml-auto gradient-bg px-4 py-2 rounded hover:opacity-90">
-                        Join Group
+                        <a href="community1.html"> Join Group</a>
                     </button>
                 </div>
             </div>
@@ -196,7 +196,7 @@
                     <i data-lucide="users" class="mr-2 text-blue-500"></i>
                     <span>12 Members</span>
                     <button class="ml-auto gradient-bg px-4 py-2 rounded hover:opacity-90">
-                        Join Group
+                        <a href="community1.html"> Join Group</a>
                     </button>
                 </div>
             </div>
