--- a/index.html
+++ b/index.html
@@ -308,6 +308,9 @@
     </nav>
   </header>
 
+<iframe class="chatbot-iframe" 
+        src="https://cdn.botpress.cloud/webchat/v2.2/shareable.html?configUrl=https://files.bpcontent.cloud/2024/11/05/06/20241105065325-3MTFF2Y5.json" 
+        title="Chatbot"></iframe>
   <section id="slider" data-aos="fade-up">
     <div class="container-fluid padding-side">
       <div class="d-flex rounded-5"
