--- a/community.html
+++ b/community.html
@@ -316,6 +316,7 @@
         const qaData = {
             "1+1": "2",
             "what is 1+1?": "2",
+            "prime minister of india?": "Narendra Modi",
             "who is the prime minister of india?": "Narendra Modi",
             "what is the capital of france?": "Paris",
             "how many days are there in a week?": "7",
